--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,8 +4,14 @@
 }
 
 #root {
-  background-color: black;
+  position: relative;
   min-width: 100vw;
   min-height: 100vh;
-  overflow-x: hidden;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 3000;
 }
